--- a/simulator/index.html
+++ b/simulator/index.html
@@ -14,57 +14,68 @@
 
 </style>
 <body>
+<button type="button" onclick="displayJson(-1)">left</button>
+<button type="button" onclick="displayJson(1)">right</button>
 <script src="d3/d3.min.js"></script>
 <script src="d3/d3.js"></script>
 <script>
+var i = 1;
 
-var width = 960,
-    height = 500;
+function displayJson(value) {
+    var width = 960,
+        height = 500;
 
-var color = d3.scale.category20();
+    var color = d3.scale.category20();
 
-var force = d3.layout.force()
-    .charge(-120)
-    .linkDistance(30)
-    .size([width, height]);
+    var force = d3.layout.force()
+        .charge(-120)
+        .linkDistance(30)
+        .size([width, height]);
 
-var svg = d3.select("body").append("svg")
-    .attr("width", width)
-    .attr("height", height);
+    d3.select("svg").remove();
 
-d3.json("out.json", function(error, graph) {
-  if (error) throw error;
+    var svg = d3.select("body").append("svg")
+        .attr("width", width)
+        .attr("height", height);
 
-  force
-      .nodes(graph.nodes)
-      .links(graph.links)
-      .start();
+    i += value
+    console.log("json " + i);
+    var file = "output/" + i + ".json"
+    d3.json(file, function(error, graph) {
+    if (error) throw error;
 
-  var link = svg.selectAll(".link")
-      .data(graph.links)
-      .enter().append("line")
-      .attr("class", "link")
+    force
+        .nodes(graph.nodes)
+        .links(graph.links)
+        .start();
 
-  var node = svg.selectAll(".node")
-      .data(graph.nodes)
-      .enter().append("circle")
-      .attr("class", "node")
-      .attr("r", 5)
-      .style("fill", function(d) { return color(d.road_nr); })
-      .call(force.drag);
+    var link = svg.selectAll(".link")
+        .data(graph.links)
+        .enter().append("line")
+        .attr("class", "link")
 
-  node.append("title")
-      .text(function(d) { return d.name; });
+    var node = svg.selectAll(".node")
+        .data(graph.nodes)
+        .enter().append("circle")
+        .attr("class", "node")
+        .attr("r", 5)
+        .style("fill", function(d) { return color(d.road_nr); })
+        .call(force.drag);
 
-  force.on("tick", function() {
-    link.attr("x1", function(d) { return d.source.x; })
-        .attr("y1", function(d) { return d.source.y; })
-        .attr("x2", function(d) { return d.target.x; })
-        .attr("y2", function(d) { return d.target.y; });
+    node.append("title")
+        .text(function(d) { return d.name; });
 
-    node.attr("cx", function(d) { return d.x; })
-        .attr("cy", function(d) { return d.y; });
+    force.on("tick", function() {
+      link.attr("x1", function(d) { return d.source.x; })
+          .attr("y1", function(d) { return d.source.y; })
+          .attr("x2", function(d) { return d.target.x; })
+          .attr("y2", function(d) { return d.target.y; });
+
+      node.attr("cx", function(d) { return d.x; })
+          .attr("cy", function(d) { return d.y; });
+    });
   });
-});
+}
 
+displayJson(0);
 </script>
